--- a/app/index.html
+++ b/app/index.html
@@ -23,20 +23,33 @@
 
 <!-- Add your site or application content here -->
 <div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-
-      <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">Home</a></li>
-          <li><a ng-href="#/blog">Blog</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/contact">Contact</a></li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle"
+              data-toggle="collapse" data-target="#nav-toggle">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Matrik</a>
     </div>
-  </div>
+
+    <div class="collapse navbar-collapse" id="nav-toggle">
+
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#/">Home</a></li>
+        <li><a ng-href="#/blog">Blog</a></li>
+        <li><a ng-href="#/about">About</a></li>
+        <li><a ng-href="#/contact">Contact</a></li>
+      </ul>
+
+      <form class="navbar-form navbar-right" role="search">
+        <input type="text" class="form-control"
+               placeholder="Search">
+      </form>
+    </div>
+
+  </nav>
 </div>
 
 <div class="container">
